Add Ship factory

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Battleship</title>
     <meta charset="UTF-8" />
-    <script src="script.js" defer></script>
+    <script src="index.js" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
 
@@ -12,9 +12,8 @@
 
     <footer>
       <h5>
-        Code by Fernetazo<a href="https://github.com/Fernetazo/Battleship">
-          <img src="GitHubIcon.png" alt="Git Hub icon"
-        /></a>
+        Code by Fernetazo<a href="https://github.com/Fernetazo/Battleship"
+        <img src="GitHubIcon.png" alt="Git Hub icon" /></a>
       </h5>
     </footer>
   </body>
