Add render module function

--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
   <head>
     <title>Battleship</title>
     <meta charset="UTF-8" />
-    <script src="index.js" defer></script>
+    <script  src="index.js" type="module" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
-    <main></main>
+    <main>
+      <div>Player 1</div>
+      <div class="gridContainer P1">
+      </div>
+      <div>CPU radar</div>
+      <div class="gridContainer P2">
+      </div>
+    </main>
 
     <footer>
       <h5>
