--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Battleship</title>
     <meta charset="UTF-8" />
-    <script  src="index.js" type="module" defer></script>
+    <script  src="logic.js" type="module" defer></script>
     <link rel="stylesheet" href="style.css" />
   </head>
 
