--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <main>
+    <main><div class='display'></div>
       <div>Player 1</div>
       <div class="gridContainer P1">
       </div>
