Add manual ship placement draft

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
 
   <body>
-    <main><div class='display'></div>
+
+    <main>
+      <div class='display'></div>
       <div>Player 1</div>
       <div class="gridContainer P1">
       </div>
