--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <body>
     <main>
+      <div class="mainTitle">BATTLESHIP</div>
       <div class="display"></div>
 
       <div class="playerIndicatorContainer">
