--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <footer>
       <h5>
-        <a>Code by Fernetazo</a>
+        Code by Fernetazo
         <a href="https://github.com/Fernetazo/Battleship">
           <img src="GitHubIcon.png" alt="Git Hub icon" />
         </a>
